feat: Work in progress

--- a/docker-sync.yml
+++ b/docker-sync.yml
@@ -18,7 +18,7 @@ options:
   # unison_image: eugenmayer/unison:2.51.3-4.12.0-ARM64
 
   # The image to use for the rsync container. (<sync_strategy>_image)
-  rsync_image: eugenmayer/rsync
+  rsync_image: emirdeliz/eugenmayer-rsync-arm-64:latest
 syncs:
   #IMPORTANT: ensure this name is unique and does not match your other application container name
   appcode-unison-rsync-sync: #tip: add -sync and you keep consistent names as a convention
