--- a/docker-sync.yml
+++ b/docker-sync.yml
@@ -12,24 +12,24 @@ options:
   project_root: 'pwd'
 
   # The image to use for the rsync container. (<sync_strategy>_image)
-  # native_osx_image: eugenmayer/unison:2.51.3-4.12.0-ARM64
+  native_osx_image: eugenmayer/unison:2.51.3-4.12.0-ARM64
 
   # The image to use for the rsync container. (<sync_strategy>_image)
   # unison_image: eugenmayer/unison:2.51.3-4.12.0-ARM64
 
   # The image to use for the rsync container. (<sync_strategy>_image)
-  rsync_image: emirdeliz/eugenmayer-rsync-arm-64:latest
+  # rsync_image: emirdeliz/eugenmayer-rsync-arm-64:latest
 syncs:
   #IMPORTANT: ensure this name is unique and does not match your other application container name
   appcode-unison-rsync-sync: #tip: add -sync and you keep consistent names as a convention
     # Operating system aware sync strategy.
-    # sync_strategy: native_osx
+    sync_strategy: native_osx
 
     # Operating system aware sync strategy.
     # sync_strategy: 'unison'
 
     # Operating system aware sync strategy.
-    sync_strategy: 'rsync'
+    # sync_strategy: 'rsync'
 
     # When a port of a container is exposed, on which IP does it get exposed. Localhost for docker for mac, something else for docker-machine.
     sync_host_ip: 'localhost'
